--- a/Imazen.LightResize.csproj
+++ b/Imazen.LightResize.csproj
@@ -36,8 +36,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LightResize.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="SinglePurposeResize.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
