--- a/Imazen.LightTest/Imazen.LightTest.csproj
+++ b/Imazen.LightTest/Imazen.LightTest.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Imazen.LightResize.csproj">
+    <ProjectReference Include="..\Imazen.LightResize\Imazen.LightResize.csproj">
       <Project>{C13AE8F5-392C-40DB-9FA8-AC7337A5C229}</Project>
       <Name>Imazen.LightResize</Name>
     </ProjectReference>
