Add tests for how `ResizeJob` handles job options
 * `JobOption.PreserveTargetBitmap` is not yet covered.

 * There appears to be a bug regarding source stream rewinding in
   conjunction with `JobOptions.BufferEntireSourceStream`. This job
   option will cause the source stream position to be reset to 0
   instead of what it was prior to invoking `Build`. This remains to
   be fixed later. For now, the failing unit tests only document
   the current behavior.

--- a/Imazen.LightResize.Tests/Imazen.LightResize.Tests.csproj
+++ b/Imazen.LightResize.Tests/Imazen.LightResize.Tests.csproj
@@ -43,7 +43,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LightResizeTest.cs" />
+    <Compile Include="ResizeJobTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
