Add unit tests regarding `FitMode` and `ScaleMode`

--- a/Imazen.LightResize.Tests/Imazen.LightResize.Tests.csproj
+++ b/Imazen.LightResize.Tests/Imazen.LightResize.Tests.csproj
@@ -43,6 +43,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ResizeJobWithExplicitConsumer.cs" />
     <Compile Include="ResizeJobTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
