Put some polish on the XML documentation comments
 * Complete missing parameter and return value descriptions.

 * Ensure consistency when referring to source and destination files
   or streams in parameter names. (This is potentially a breaking
   change, users could have made us of named parameters in their
   existing code.)

 * Enable generation of XML documentation comment file.

--- a/Imazen.LightResize/Imazen.LightResize.csproj
+++ b/Imazen.LightResize/Imazen.LightResize.csproj
@@ -16,4 +16,8 @@
     <Description>Embeddable image resizing library for console, WPF, &amp; WinForms usage. Not suitable for use in ASP.NET applications.</Description>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Imazen.LightResize.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
