--- a/LightResize/LightResize.csproj
+++ b/LightResize/LightResize.csproj
@@ -20,4 +20,14 @@
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\LightResize.xml</DocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.0">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
