Reduce public API surface
 * Remove `SinglePurposeResize.cs`. This was useful for demonstration
   purposes, but less so in a NuGet package; `ResizeJob` can achieve
   the same thing with only very little additional code complexity
   for the end user.

 * Make helper classes `StreamUtils`, `BoxMath`, and `Encoding`
   internal.

 * As a consequence of the previous bullet point, a `[InternalsVisi-
   bleTo]` attribute becomes necessary so we can still unit test
   `StreamUtils`. Create an `AssemblyInfo.cs` and re-group it and
   `GlobalSuppressions.cs` in a new `Properties` project node.

--- a/LightResize.Tests/LightResize.Tests.csproj
+++ b/LightResize.Tests/LightResize.Tests.csproj
@@ -9,10 +9,12 @@
     <Product>LightResize</Product>
     <Description></Description>
     <Copyright>Copyright © 2012 Imazen, 2017 stakx</Copyright>
+
+    <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+    <Compile Include="..\GlobalSuppressions.cs" Link="Properties\GlobalSuppressions.cs" />
   </ItemGroup>
 
   <ItemGroup>
