--- a/LightResize/LightResize.csproj
+++ b/LightResize/LightResize.csproj
@@ -14,6 +14,8 @@
     <PackageTags>imaging image-resizing bitmap wpf windows-forms system-drawing gdi+</PackageTags>
     <Product>LightResize</Product>
     <Description>Embeddable image resizing library for console, WPF, &amp; WinForms usage. Not suitable for use in ASP.NET applications.</Description>
+
+    <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -21,7 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+    <Compile Include="..\GlobalSuppressions.cs" Link="Properties\GlobalSuppressions.cs" />
   </ItemGroup>
 
   <ItemGroup>
